[package]
name = "darchive"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
indicatif = { version = "0.17.11", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.44.2", features = ["full"] }
